force-app/main/default/objects/Action_Definition__mdt/Action_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Definitions for executable governance actions.</description>
    <label>Action Definition</label>
    <pluralLabel>Action Definitions</pluralLabel>
</CustomObject>