force-app/main/default/objects/Action_Definition__mdt/fields/Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Action_Key__c</fullName>
    <description>Unique identifier for the action.</description>
    <label>Action Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>