force-app/main/default/objects/Action_Definition__mdt/fields/Apex_Handler__c.field-meta.xml
<CustomField>
    <fullName>Apex_Handler__c</fullName>
    <description>Name of the Apex class that implements IActionHandler for this action.</description>
    <label>Apex Handler</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>