force-app/main/default/objects/Action_Definition__mdt/fields/Is_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the action can be executed in bulk.</description>
    <label>Is Bulk</label>
    <type>Checkbox</type>
</CustomField>