force-app/main/default/objects/Action_Definition__mdt/fields/Requires_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Confirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the user must confirm before executing the action.</description>
    <label>Requires Confirmation</label>
    <type>Checkbox</type>
</CustomField>